--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -2,20 +2,90 @@
 // $Projects Section
 // ==================================================
 .projects-section {
-    margin-top: 40px;
+    margin-top: 60px;
 }
 .projects-gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 60px;
+    margin-bottom: 100px;
     li {
         @include list-reset;
         margin: 10px 0;
-        img {
-            width: 100%;
-        }
     }
+}
+.project-card {
+    width: 390px;
+    height: 440px;
+}
+
+.project-img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 390px;
+    height: 220px;
+    display: block;
+}
+
+.projects-gallery > li:nth-child(1) > div:nth-child(1) > div:nth-child(1) {
+    background-image: url(../assets/p-1.png);
+}
+
+.projects-gallery > li:nth-child(2) > div:nth-child(1) > div:nth-child(1) {
+    background-image: url(../assets/p-2.png);
+}
+
+.projects-gallery > li:nth-child(3) > div:nth-child(1) > div:nth-child(1) {
+    background-image: url(../assets/p-3.png);
+}
+
+.projects-gallery > li:nth-child(4) > div:nth-child(1) > div:nth-child(1) {
+    background-image: url(../assets/p-4.png);
+}
+
+.projects-gallery > li:nth-child(5) > div:nth-child(1) > div:nth-child(1) {
+    background-image: url(../assets/p-5.png);
+}
+
+.projects-gallery > li:nth-child(6) > div:nth-child(1) > div:nth-child(1) {
+    background-image: url(../assets/p-6.png);
+}
+
+.project {
+    padding: 30px;
+    background: #3d3d49;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 390px;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #fff;
+    div a {
+            margin-right: 20px;
+            color: white;
+            font-size: 1.8rem;
+            transition: all 1.5s cubic-bezier(0,.81,.24,.99);
+            &:hover {
+                color: color(secondary);
+            }
+        }
+        
+    }
+
+.project-heading {
+    color: #bdbdc8;
+    font-size: 1.6rem;
+    font-weight: weight(light);
+}
+.project-desc {
+    margin-top: 10px;
+    font-size: 1.8rem;
+    font-weight: weight(normal);
 }
 
 // ==================================================
