--- a/styles/style.css
+++ b/styles/style.css
@@ -547,7 +547,7 @@ header {
 }
 
 .projects-section {
-  margin-top: 40px;
+  margin-top: 60px;
 }
 
 .projects-gallery {
@@ -559,7 +559,8 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 20px;
+  margin-top: 60px;
+  margin-bottom: 100px;
 }
 
 .projects-gallery li {
@@ -569,8 +570,86 @@ header {
   margin: 10px 0;
 }
 
-.projects-gallery li img {
-  width: 100%;
+.project-card {
+  width: 390px;
+  height: 440px;
+}
+
+.project-img {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 390px;
+  height: 220px;
+  display: block;
+}
+
+.projects-gallery > li:nth-child(1) > div:nth-child(1) > div:nth-child(1) {
+  background-image: url(../assets/p-1.png);
+}
+
+.projects-gallery > li:nth-child(2) > div:nth-child(1) > div:nth-child(1) {
+  background-image: url(../assets/p-2.png);
+}
+
+.projects-gallery > li:nth-child(3) > div:nth-child(1) > div:nth-child(1) {
+  background-image: url(../assets/p-3.png);
+}
+
+.projects-gallery > li:nth-child(4) > div:nth-child(1) > div:nth-child(1) {
+  background-image: url(../assets/p-4.png);
+}
+
+.projects-gallery > li:nth-child(5) > div:nth-child(1) > div:nth-child(1) {
+  background-image: url(../assets/p-5.png);
+}
+
+.projects-gallery > li:nth-child(6) > div:nth-child(1) > div:nth-child(1) {
+  background-image: url(../assets/p-6.png);
+}
+
+.project {
+  padding: 30px;
+  background: #3d3d49;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 390px;
+  height: 220px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fff;
+}
+
+.project div a {
+  margin-right: 20px;
+  color: white;
+  font-size: 1.8rem;
+  -webkit-transition: all 1.5s cubic-bezier(0, 0.81, 0.24, 0.99);
+  transition: all 1.5s cubic-bezier(0, 0.81, 0.24, 0.99);
+}
+
+.project div a:hover {
+  color: #FE5D44;
+}
+
+.project-heading {
+  color: #bdbdc8;
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+
+.project-desc {
+  margin-top: 10px;
+  font-size: 1.8rem;
 }
 
 .about-section {
@@ -973,10 +1052,6 @@ footer .copyright-container p {
   }
   .projects-gallery li {
     margin: 10px;
-  }
-  .projects-gallery li img {
-    width: 390px;
-    height: 440px;
   }
   .about-box {
     -ms-flex-preferred-size: 450px;
